
____________________________________________________________________________
By: smueller on 2006/07/22
Log:
    * Module::Install didn't regenerate META.yml because author bit
      wasn't set.
    * This is 0.13. (Sorry again, need to do this to make CPAN.pm happy.)
____________________________________________________________________________
By: smueller on 2006/07/21
Log:
    * Found a couple of path-related bugs in the new functions of 0.11.
    * This be 0.12. Sorry!
____________________________________________________________________________
By: smueller on 2006/07/21
Log:
    * Fixed potential bugs where slashes were used as path separators.
      Now using File::Spec everywhere (I think).
    * Added merge_par() which merges two or more .par archives.
    * Added remove_man() which removes all man pages and html docs from
      a .par archive.
    * Fixed a bit of indentation. (I know. Don't do it.)
    * This be 0.11
____________________________________________________________________________
By: smueller on 2006/07/05
Log:
    * .par distributions fetched from URLs will now be installed as
      distributions named "Module-Name" instead of
      "http://foo.bar/path/Module-Name-0.01-architecture-version.par".
    * Updated Module::Install to 0.63
    * This be 0.10
____________________________________________________________________________
By: smueller on 2006/05/20
Log:
    * Updated Module::Install to 0.62
    * This be 0.09
____________________________________________________________________________
By: smueller on 2006/02/13
Log:
    * Updated Module::Install
    * Slight documentation fixes.
    * This be 0.08
____________________________________________________________________________
[  9539] By: autrijus                              on 2004/01/01  10:23:13
        Log: * This be 0.07.
             * Do not use an identical README as PAR's. ;-)
	   ! README
____________________________________________________________________________